--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-/*
-* {
-    border: 1px solid black;
-}
-*/
-
 body {
     background-color: #FFFFFF;
     width: 700px;
@@ -13,7 +7,10 @@ body {
 
 #title {
     font-family: 'Lato', sans-serif;
-    text-align: center;
+	font-size: 40px;
+	font-weight: 300;
+	color: black;
+	text-align: center;
 }
 
 #linkList {
@@ -29,4 +26,19 @@ body {
 .logo {
     width: 50px;
     height: 50px;
+}
+
+a:link {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    text-decoration: none;
+    color: black;
+}
+
+a:visited {
+    text-decoration: none;
+    color: black;
 }
