--- a/style.css
+++ b/style.css
@@ -2,11 +2,6 @@ body {
     background-color: #FFFFFF;
     width: 800px;
     @import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic);
-    position: absolute;
-    top:0;
-    bottom: 0;
-    left: 0;
-    right: 0;
     margin: auto;
 }
 
@@ -19,7 +14,12 @@ body {
 }
 
 #linkList {
-    margin: 0px auto;
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
     padding: 0px;
 }
 
