--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     margin-right: auto;
     width: 800px; 
     background-color: rgba(255,255,255,0.7);
-
+    border-radius: 10px;
 }
 
 p {
