--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
     
-    background: url(images/background.jpg);
+    background: url(images/background.png);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
