--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
 html {
     
     background: url(images/background.png);
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    background-size: 100% 100%;
 }
 
 body {
