--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 html {
     
     background: url(images/background.png);
-    background-size: 100% 100%;
+    -webkit-background-size: contain;
+ -    -moz-background-size: contain;
+ -    -o-background-size: contain;
+ -    background-size: contain;
 }
 
 body {
