--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
     
-    background: url(images/background.png);
+    background: url(images/background.jpg);
     -webkit-background-size: contain;
  -    -moz-background-size: contain;
  -    -o-background-size: contain;
