--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 html {
     
     background: url(images/background.jpg);
-    -webkit-background-size: contain;
- -    -moz-background-size: contain;
- -    -o-background-size: contain;
- -    background-size: contain;
+    -webkit-background-size: cover;
+ -    -moz-background-size: cover;
+ -    -o-background-size: cover;
+ -    background-size: cover;
 }
 
 body {
