--- a/styles/style.css
+++ b/styles/style.css
@@ -14,10 +14,12 @@ html {
 
 .mid-nav {
 	background-color: #fffaea;
+  border-top: 2px solid #d8d8d8;
+  border-bottom: 5px solid #6285bc;
 }
 
 .mid-nav a.nav-link {
-	padding: 8px 50px;
+	padding: 8px 70px;
 	font-family: 'Oswald', serif;
 	font-size: 24px;
 	color: #000;
@@ -27,10 +29,6 @@ html {
 .mid-nav a.nav-link:focus,
 .mid-nav a.nav-link:active {
 	color: #89b6ff;
-}
-.mid-nav a.nav-link:focus,
-.mid-nav a.nav-link:active {
-	text-decoration: underline;
 }
 
 .bottom-content {
